# RTCW-SP

./: CMakeLists.txt
src/: CMakeLists.txt
src/botlib/: CMakeLists.txt
src/cgame/: CMakeLists.txt
src/extractfuncs/: CMakeLists.txt
src/game/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/splines/: CMakeLists.txt
src/ui/: CMakeLists.txt
